font and text alignment changes.

--- a/src/templates/template-0/resume.html
+++ b/src/templates/template-0/resume.html
@@ -25,11 +25,11 @@
         }
 
         .font-primary {
-            font-family: "Poppins", sans-serif;
+            font-family: "Montserrat", sans-serif;
         }
 
         .font-secondary {
-            font-family: "Montserrat", sans-serif;
+            font-family: "Poppins", sans-serif;
         }
 
         li::marker {
@@ -47,7 +47,7 @@
         }
     </style>
 </head>
-<body class="flex flex-col items-center text-[8pt] font-secondary">
+<body class="flex flex-col items-center text-[8pt] font-primary">
     <article class="max-w-[596pt] mx-[36pt] my-[24pt]">
         <header class="flex flex-col items-center">
             <h1 class="text-[24pt] font-bold uppercase">firstname lastname</h1>
@@ -72,12 +72,12 @@
         </header>
         <main class="mt-[24pt]">
             <!-- Objective -->
-            <section class="font-secondary text-justify">
+            <section class="text-justify">
                 Lorem ipsum, dolor sit amet consectetur adipisicing elit. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Lorem ipsum, dolor sit amet consectetur adipisicing elit.
             </section>
 
             <!-- Experience -->
-            <section id="experience" class="mt-[16pt] font-secondary">
+            <section id="experience" class="mt-[16pt]">
                 <h2 class="px-[2pt] pt-[1pt] bg-sky-50 text-sky-500 font-semibold uppercase">Experience</h2>
                 <section class="pt-[4pt]">
                     <!-- company details -->
@@ -94,7 +94,7 @@
                             <div class="w-[16pt] h-[16pt] flex items-center justify-center">
                                 <i class="fas fa-circle text-[6pt] text-gray-400"></i>
                             </div>
-                            <p class="ml-[8pt] font-medium italic">Position, MMM YYYY - Current</p>
+                            <p class="pt-[2pt] ml-[8pt] font-medium italic">Position, MMM YYYY - Current</p>
                         </div>
                         <div class="flex justify-start">
                             <div class="w-[17pt] flex justify-center">
@@ -109,7 +109,7 @@
                                         <div class="w-[18pt] h-[14pt] pl-[1pt] flex items-center justify-center">
                                             <i class="fas fa-code text-sky-500"></i>
                                         </div>
-                                        <p class="w-full pt-[1pt] ml-[6pt] font-light font-primary">Project Title</p>
+                                        <p class="w-full pt-[1pt] ml-[6pt] font-light font-secondary">Project Title</p>
                                     </div>
                                     <!-- project details -->
                                     <div>
@@ -140,7 +140,7 @@
                                         <div class="w-[18pt] h-[14pt] pl-[1pt] flex items-center justify-center">
                                             <i class="fas fa-code text-sky-500"></i>
                                         </div>
-                                        <p class="w-full pt-[1pt] ml-[6pt] font-light font-primary">Project Title</p>
+                                        <p class="w-full pt-[1pt] ml-[6pt] font-light font-secondary">Project Title</p>
                                     </div>
                                     <!-- project details -->
                                     <div>
@@ -174,7 +174,7 @@
                             <div class="w-[16pt] h-[16pt] flex items-center justify-center">
                                 <i class="fas fa-circle text-[6pt] text-gray-400"></i>
                             </div>
-                            <p class="ml-[8pt] font-medium italic">Position, MMM YYYY - MMM YYYY</p>
+                            <p class="pt-[2pt] ml-[8pt] font-medium italic">Position, MMM YYYY - MMM YYYY</p>
                         </div>
                         <div class="flex justify-start">
                             <div class="w-[17pt] flex justify-center">
@@ -189,7 +189,7 @@
                                         <div class="w-[18pt] h-[14pt] pl-[1pt] flex items-center justify-center">
                                             <i class="fas fa-code text-sky-500"></i>
                                         </div>
-                                        <p class="w-full pt-[1pt] ml-[6pt] font-light font-primary">Project Title</p>
+                                        <p class="w-full pt-[1pt] ml-[6pt] font-light font-secondary">Project Title</p>
                                     </div>
                                     <!-- project details -->
                                     <div>
@@ -220,7 +220,7 @@
                                         <div class="w-[18pt] h-[14pt] pl-[1pt] flex items-center justify-center">
                                             <i class="fas fa-code text-sky-500"></i>
                                         </div>
-                                        <p class="w-full pt-[1pt] ml-[6pt] font-light font-primary">Project Title</p>
+                                        <p class="w-full pt-[1pt] ml-[6pt] font-light font-secondary">Project Title</p>
                                     </div>
                                     <!-- project details -->
                                     <div>
@@ -251,7 +251,7 @@
             </section>
 
             <!-- Skills -->
-            <section class="mt-[16pt] font-secondary">
+            <section class="mt-[16pt]">
                 <h2 class="px-[2pt] pt-[1pt] bg-sky-50 text-sky-500 font-semibold uppercase">Skills</h2>
                 <ul class="pt-[4pt] list-disc list-inside">
                     <li class="pl-[6pt]">
@@ -293,7 +293,7 @@
             </section>
 
             <!-- Education -->
-            <section class="mt-[16pt] font-secondary">
+            <section class="mt-[16pt]">
                 <h2 class="px-[2pt] pt-[1pt] bg-sky-50 text-sky-500 font-semibold uppercase">Education</h2>
                 <section class="pt-[4pt] pb-[2pt] flex items-start justify-start">
                     <div class="w-[16pt] h-[16pt] flex items-center justify-center">
@@ -325,7 +325,7 @@
             </section>
 
             <!-- Certifications -->
-            <section class="mt-[16pt] font-secondary">
+            <section class="mt-[16pt]">
                 <h2 class="px-[2pt] pt-[1pt] bg-sky-50 text-sky-500 font-semibold uppercase">Certifications</h2>
                 <section class="pt-[4pt] pb-[2pt] pl-[1pt] flex items-start justify-start">
                     <div class="w-[16pt] h-[16pt] flex items-center justify-center">
@@ -336,7 +336,7 @@
             </section>
 
             <!-- Languages -->
-            <section class="mt-[16pt] font-secondary">
+            <section class="mt-[16pt]">
                 <h2 class="px-[2pt] pt-[1pt] bg-sky-50 text-sky-500 font-semibold uppercase">Languages</h2>
                 <ul class="pt-[4pt] list-disc list-inside">
                     <li class="pl-[6pt]">Language 1</li>
